# H3LEnhanced

./: .gitignore  .travis.yml  CMakeLists.txt  DOCUMENTACAO.txt  README.md  appveyor.yml  appveyor_install_dependencies.ps1  travis_install_dependencies.sh
cmake/: FindSDL2.cmake  FindVGUI.cmake  Findvgui.cmake  WinXPSupport.cmake
common/: CMakeLists.txt  Color.h  cvardef.h
common/xml/: CConsoleFormatTarget.cpp  CConsoleFormatTarget.h  CDOMPrintErrorHandler.cpp  CDOMPrintErrorHandler.h  CErrorHandler.cpp  CErrorHandler.h  CGameFileFormatTarget.cpp  CGameFileFormatTarget.h  CMakeLists.txt  CStdOutFormatTarget.cpp  CStdOutFormatTarget.h  CStrX.h  CStreamFormatTarget.h  CXMLManager.cpp  CXMLManager.h  CXStr.h  Logging.h  XMLUtils.cpp  XMLUtils.h
game/client/: MessageHandler.cpp  MessageHandler.h  ev_hldm.cpp  voice_status.h
game/client/hl/: hl_baseentity.cpp
game/client/input/: input.cpp  inputw32.cpp
game/client/renderer/: camera.h  in_camera.cpp
game/server/: CGlobalState.cpp  CMap.cpp  CServerGameInterface.cpp  Decals.cpp  Server.cpp  Server.h  Skill.cpp  Skill.h  UserMessages.cpp  UserMessages.h  Weapons.cpp  client.cpp  util.cpp
game/server/Angelscript/: CASPluginManager.cpp
game/server/config/: CServerConfig.cpp  CServerConfig.h
game/server/entities/: CBaseDelay.cpp  CBaseEntity.combat.cpp  CBaseEntity.server.cpp  CFuncParent.cpp  CFuncParent.h  CHu3XSpot.cpp  CHu3XSpot.h  (+11 more)
game/server/entities/NPCs/: CAirBope.cpp  CAirBope.h  CBarnacle.cpp  CBarnacle.h  CBaseMonster.combat.cpp  CBaseMonster.h  CBigMomma.cpp  CBigMomma.h  CBitch1.cpp  CBitch1.h  CBitch2.cpp  CBitch2.h  CBitch3.cpp  CBitch3.h  CBitch4.cpp  CBitch4.h  CBullsquid.cpp  CButano.cpp  CButano.h  CGenericMonsterGod.cpp  CGenericMonsterGod.h  CGloriousBreasts.cpp  CGloriousBreasts.h  CHoundeye.cpp  CMakeLists.txt  CMonsterMaker.cpp  CPeacock.cpp  CPeacock.h  CPedestrian1.cpp  CPedestrian1.h  CPedestrian2.cpp  CPedestrian2.h  CPedestrian3.cpp  CPedestrian3.h  CPlant.cpp  CPlant.h  CRoach.cpp  CScientist.cpp  CScientist.h  CScientistGiant.cpp  (+7 more)
game/shared/: CBaseGameInterface.cpp  CMakeLists.txt  CReplacementCache.cpp  CWeaponInfoCache.cpp  DelayLoad.cpp  Weapons.h  WeaponsConst.h  util.h
pm_shared/: pm_shared.cpp
source_sdk/tier1/: CMakeLists.txt
(+116 files in other folders)
